# reqresolve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
bartender/: __main__.py  cli.py  git.py  log.py
bartender/interactor/: __init__.py  abc.py  exception.py  spec.py
bartender/interactor/pyproject/: __init__.py  model.py
bartender/interactor/requirements/: __init__.py
bartender/pypi/: client.py  exception.py
reqresolve/: __main__.py  cli.py  git.py
reqresolve/interactor/: __init__.py  abc.py  interface.py  spec.py
reqresolve/interactor/pyproject/: __init__.py  interactor.py
reqresolve/interactor/requirements/: __init__.py  interactor.py
reqresolve/pypi/: __init__.py  client.py
tests/: test_pypi_client.py
