[project]
name = "reqresolve"
version = "0.1.0"
description = "Pin your dependencies according to commit date"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pygit2>=1.19.0",
    "rich>=14.2.0",
]

[project.scripts]
reqresolve = "reqresolve.__main__:main"

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
