[project]
name = "reqresolve"
version = "2.1.0"
description = "Pin your dependencies according to commit date"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pygit2>=1.19.0",
    "rich>=14.2.0",
]

[project.scripts]
reqresolve = "reqresolve.__main__:main"

[tool.uv]
package = true

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "nuitka>=2.8.9",
]
